added more logic to handle relative urls